# Code-Roaster

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
src/code_roaster/: __init__.py  agent.py  config.py  history.py  main.py  prompts.py  tools.py  tts.py  tui.py
